--- a/search.html
+++ b/search.html
@@ -67,7 +67,7 @@
 							<table id="result_list" class="table table-striped table-bordered table-condensed"></table>
 					</div>
 					<div id="settings">
-							<table id="settings_list" class="table table-striped table-bordered table-condensed"></table>
+							<table id="field_list" class="table table-striped table-borderedd table-condensed"></table>
 					</div>	
 				
 		    </div>
