toggle working 4 real

--- a/search.html
+++ b/search.html
@@ -39,11 +39,11 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </a>
-		      <a class="brand" href="#">Project name</a>
+		      <a class="brand" href="#">Searchalizer</a>
 		      <div class="nav-collapse">
 		        <ul class="nav">
 		          <li class="active"><a href="#">Home</a></li>
-		          <li><a href="#settings">About</a></li>
+		          <li><a href="#settings">Settings</a></li>
 		          <li><a href="#contact">Contact</a></li>
 		        </ul>
 		      </div><!--/.nav-collapse -->
