--- a/search.html
+++ b/search.html
@@ -8,13 +8,16 @@
     <meta name="author" content="Birger Lie, Companybook AS">
 
     <!-- Le styles -->
+    <link href="ui/css/demos.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
+
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -53,9 +56,12 @@
 		
 		<div class="container-fluid">
 		  <div class="row-fluid">
-		    <div class="span2">
-		      Equalizer goes here
+		    <div class="span2 ui-widget-content" >
+		     	<h3>Equalize your Query</h3>
+					<div id="eq">
+					</div>
 		    </div>
+		
 		    <div class="span10">
 					<div id="search">
 						<form class="well form-search">
@@ -84,8 +90,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="bootstrap/js/jquery.js"></script>
-<!--     <script src="bootstrap/js/bootstrap-transition.js"></script> -->
+		<!--    <script src="bootstrap/js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap-alert.js"></script>
     <script src="bootstrap/js/bootstrap-modal.js"></script>
     <script src="bootstrap/js/bootstrap-dropdown.js"></script>
@@ -93,11 +98,21 @@
     <script src="bootstrap/js/bootstrap-tab.js"></script>
     <script src="bootstrap/js/bootstrap-tooltip.js"></script>
     <script src="bootstrap/js/bootstrap-popover.js"></script>
-    <script src="bootstrap/js/bootstrap-button.js"></script>
+
     <script src="bootstrap/js/bootstrap-collapse.js"></script>
     <script src="bootstrap/js/bootstrap-carousel.js"></script>
     <script src="bootstrap/js/bootstrap-typeahead.js"></script>
-    <script src="query_eval.js"></script>
+
+		-->
+
+			<script src="jquery-ui/development-bundle/jquery-1.7.1.js"></script>
+    <script src="bootstrap/js/bootstrap-button.js"></script>							
+			<script src="ui/jquery.ui.core.js"></script>
+			<script src="ui/jquery.ui.widget.js"></script>
+			<script src="ui/jquery.ui.mouse.js"></script>
+			<script src="ui/jquery.ui.slider.js"></script>
+
+      <script src="query_eval.js"></script>
 
   </body>
 </html>
