--- a/search.html
+++ b/search.html
@@ -68,7 +68,8 @@
 						  <input id="search_text" type="text" class="input-large search-query" placeholder="type your query ">
 						  <button id="search_button" type="submit" class="btn">Search</button>						 	
 						</form>
-					</div>	
+					</div>
+					<div id="debug" class='well'></div>	
 					<div id="result">
 							<table id="result_list" class="table table-striped table-bordered table-condensed"></table>
 					</div>
@@ -94,7 +95,7 @@
     <script src="bootstrap/js/bootstrap-alert.js"></script>
     <script src="bootstrap/js/bootstrap-modal.js"></script>
     <script src="bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="bootstrap/js/bootstrap-scrollspy.js"></script>
+    
     <script src="bootstrap/js/bootstrap-tab.js"></script>
     <script src="bootstrap/js/bootstrap-tooltip.js"></script>
     <script src="bootstrap/js/bootstrap-popover.js"></script>
@@ -107,11 +108,12 @@
 
 			<script src="jquery-ui/development-bundle/jquery-1.7.1.js"></script>
     <script src="bootstrap/js/bootstrap-button.js"></script>							
-			<script src="ui/jquery.ui.core.js"></script>
-			<script src="ui/jquery.ui.widget.js"></script>
-			<script src="ui/jquery.ui.mouse.js"></script>
-			<script src="ui/jquery.ui.slider.js"></script>
-
+		<script src="bootstrap/js/bootstrap-scrollspy.js"></script>
+			<!-- <script src="ui/jquery.ui.core.js"></script>
+					<script src="ui/jquery.ui.widget.js"></script>
+					<script src="ui/jquery.ui.mouse.js"></script>
+					<script src="ui/jquery.ui.slider.js"></script> -->
+		
       <script src="query_eval.js"></script>
 
   </body>
