--- a/search.html
+++ b/search.html
@@ -67,6 +67,8 @@
 						<form class="well form-search">
 						  <input id="search_text" type="text" class="input-large search-query" placeholder="type your query ">
 						  <button id="search_button" type="submit" class="btn">Search</button>						 	
+							<select id='shard'>							  
+							</select>
 						</form>
 					</div>
 					<div id="debug" class='well'></div>	
