--- a/search.html
+++ b/search.html
@@ -16,9 +16,12 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
+			.sidebar-nav{
+				min-width:300px;
+			}
     </style>
 
-    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+   <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet"> 
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -33,54 +36,61 @@
   </head>
 
   <body>
-
 		<div class="navbar navbar-fixed-top">
-		  <div class="navbar-inner">
-		    <div class="container">
-		      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </a>
-		      <a class="brand" href="#">Searchalizer</a>
-		      <div class="nav-collapse">
-		        <ul class="nav">
-		          <li class="active"><a href="#">Home</a></li>
-		          <li><a href="#settings">Settings</a></li>
-		          <li><a href="#contact">Contact</a></li>
-		        </ul>
-		      </div><!--/.nav-collapse -->
-		    </div>
-		  </div>
-		</div>
-		
+	      <div class="navbar-inner">
+	        <div class="container-fluid">
+	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </a>
+	          <a class="brand" href="#">Searchalzer</a>
+	          <div class="nav-collapse">
+	            <ul class="nav">
+	              <li class="active"><a href="#">Home</a></li>
+	              <li><a href="#settings">Setings</a></li>
+	              <li><a href="#contact">Contact</a></li>
+	            </ul>
+	            <p class="navbar-text pull-right">Server and shard <input id="server_url" type="text" class="input-large"></input><select id='shard'></select></p>
+	          </div><!--/.nav-collapse -->
+	        </div>
+	      </div>
+	    </div>
+	
 		<div class="container-fluid">
 		  <div class="row-fluid">
-		    <div class="span2 ui-widget-content" >
+		    <div class="span3" >
+					<div class="well sidebar-nav">
 		     	<h3>Equalize your Query</h3>
-					<div id="eq">
+						<div id="eq" ></div>
 					</div>
-		    </div>
-		
-		    <div class="span10">
+		    </div>		
+		    <div class="span9">
+					<div class="row-fluid">			
+						<div class="spa9">			
 					<div id="search">
 						<form class="well form-search">
 						  <input id="search_text" type="text" class="input-large search-query" placeholder="type your query ">
 						  <button id="search_button" type="submit" class="btn">Search</button>						 	
-							<select id='shard'>							  
-							</select>
 						</form>
 					</div>
+					
 					<div id="debug" class='well'></div>	
+					<div id="boost" class='well'>
+									<input id="function_query" type="text" class="input-large " placeholder="type in a function_query ">
+					</div>	
 					<div id="result">
 							<table id="result_list" class="table table-striped table-bordered table-condensed"></table>
 					</div>
 					<div id="settings">
 							<table id="field_list" class="table table-striped table-borderedd table-condensed"></table>
 					</div>	
-				
-		    </div>
-		  </div>
+	
+				</div>
+			</div>
+		</div>
+
+		  </div> <!-- /row -->
 
       <hr>
 
