--- a/search.html
+++ b/search.html
@@ -118,14 +118,10 @@
 
 		-->
 
-			<script src="jquery-ui/development-bundle/jquery-1.7.1.js"></script>
+			<script src="jquery-1.7.1.js"></script>
     <script src="bootstrap/js/bootstrap-button.js"></script>							
 		<script src="bootstrap/js/bootstrap-scrollspy.js"></script>
-			<!-- <script src="ui/jquery.ui.core.js"></script>
-					<script src="ui/jquery.ui.widget.js"></script>
-					<script src="ui/jquery.ui.mouse.js"></script>
-					<script src="ui/jquery.ui.slider.js"></script> -->
-		
+	
       <script src="query_eval.js"></script>
 
   </body>
